[package]
name = "docbuilder"
version = "0.1.0"
authors = ["Sayan Nandan <nandansayan@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.8.23"
serde = { version = "1.0.137", features = ["derive"] }
lazy_static = "1.4.0"
deser-hjson = "1.0.2"
serde_json = "1.0.79"
