[package]
name = "docbuilder"
version = "0.1.0"
authors = ["Sayan Nandan <nandansayan@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.9.22"
serde = { version = "1.0.151", features = ["derive"] }
lazy_static = "1.4.0"
deser-hjson = "1.1.0"
serde_json = "1.0.91"
